--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jest": "^29.5.3",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.5",
+    "@types/supertest": "^2.0.12",
     "@types/xml": "^1.0.8",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/parser": "^5.62.0",
@@ -46,6 +47,7 @@
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
