Updated env variables

--- a/dotenv.sample
+++ b/dotenv.sample
@@ -1,2 +1,3 @@
 ACCESS_TOKEN="<carrierx-access-token>"
-NGROK_DOMAIN="c25c-68-4-38-130.ngrok-free.app"
+TEST_PROTOCOL="https"
+TEST_DOMAIN="c25c-68-4-38-130.ngrok-free.app"
