Removed ngrok keyword

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "keywords": [
     "carrierx",
     "flexml",
-    "express",
-    "ngrok"
+    "express"
   ],
   "author": "Schlameel",
   "license": "GPL-2.0-only",
